# easyknn

./: README.md  pyproject.toml
.github/workflows/: branch.yml  release.yml
easyknn/: __init__.py  item_store.py  knn.py
tests/: test_backends.py  test_easyknn.py  test_index_builder.py  test_item_store.py  test_version.py
