[tool.poetry]
name = "easyknn"
version = "0.2.0"
description = "Easy nearest neighbors using Annoy or SKLearn"
authors = ["Sanjaya Subedi <jangedoo@gmail.com>"]
packages = [
    { include = "easyknn" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.2.0"
rope = "^1.4.0"
annoy = "^1.17.1"
scikit-learn = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
