[tool.poetry]
name = "easyknn"
version = "0.3.1"
description = "Easy nearest neighbors using Annoy or SKLearn"
authors = ["Sanjaya Subedi <jangedoo@gmail.com>"]
packages = [
    { include = "easyknn" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pytest = "^8.2.0"
rope = "^1.13.0"
annoy = "^1.17.3"
scikit-learn = "^1.3"
faiss-cpu = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
